--- a/best-practices/handle-auth.mdx
+++ b/best-practices/handle-auth.mdx
@@ -10,7 +10,7 @@ QA.tech supports most common authentication setups. If your preferred authentica
 <Warning>
   **Security Notice: Use Test Credentials Only**
   
-  Authentication credentials stored in [Configs](/core-concepts/configs) are **not encrypted** and are passed to AI language models during test execution. Always use dedicated test accounts—never real user credentials or production passwords.
+  Authentication credentials stored in [Configs](/core-concepts/configs) are **not encrypted** and are passed to AI language models during test execution. Always use dedicated test accounts - never real user credentials or production passwords.
 </Warning>
 
 ## What We Support
