--- a/configuration/ip-access-control.mdx
+++ b/configuration/ip-access-control.mdx
@@ -91,10 +91,10 @@ Consult your security provider's documentation for specific instructions on IP a
 
 **Still seeing 403 errors or captcha challenges?**
 
-1. **Verify IP addresses are current** – QA.tech IPs may change; check [Settings → Network](https://app.qa.tech/current-project/settings/network)
-2. **Check rate limiting rules** – QA.tech tests may trigger rate limits before allow rules apply
-3. **Review geographic restrictions** – Ensure no blanket blocks on QA.tech's operating regions
-4. **Wait for propagation** – CDN changes take 5-10 minutes to propagate globally
-5. **Test after changes** – Run a simple test to verify your configuration
+1. **Verify IP addresses are current** - QA.tech IPs may change; check [Settings → Network](https://app.qa.tech/current-project/settings/network)
+2. **Check rate limiting rules** - QA.tech tests may trigger rate limits before allow rules apply
+3. **Review geographic restrictions** - Ensure no blanket blocks on QA.tech's operating regions
+4. **Wait for propagation** - CDN changes take 5-10 minutes to propagate globally
+5. **Test after changes** - Run a simple test to verify your configuration
 
 **Need help?** Contact QA.tech support with your CDN provider and error details.
