--- a/core-concepts/ai-agent-testing.mdx
+++ b/core-concepts/ai-agent-testing.mdx
@@ -4,7 +4,7 @@ description: 'How QA.tech uses specialized AI agents to test your application'
 icon: user-secret
 ---
 
-QA.tech uses specialized AI agents to test your application like humans would, but faster and more thoroughly. Our system automatically routes testing tasks to the right agent based on context—no manual configuration needed.
+QA.tech uses specialized AI agents to test your application like humans would, but faster and more thoroughly. Our system automatically routes testing tasks to the right agent based on context-no manual configuration needed.
 
 ## Our AI Agent System
 
@@ -64,7 +64,7 @@ Posting GitHub review:
 "✅ Tests passing - Apple Pay integration verified"
 ```
 
-This entire workflow runs autonomously—no human intervention required.
+This entire workflow runs autonomously - no human intervention required.
 
 ## When to Use AI Agents vs Scripts
 
@@ -109,7 +109,7 @@ PR detected with untested functionality
 → PR Review executes and reports
 ```
 
-You don't manage this coordination—it happens automatically based on what you're trying to accomplish.
+You don't manage this coordination - it happens automatically based on what you're trying to accomplish.
 
 ## Getting Started
 
