--- a/core-concepts/ai-chat-assistant.mdx
+++ b/core-concepts/ai-chat-assistant.mdx
@@ -65,7 +65,7 @@ Tests generated in chat aren't committed until you explicitly click "Add Selecte
 
 ## Agentic AI Workflows Behind the Scenes
 
-The Chat Assistant uses multiple specialized AI agents that automatically coordinate to handle your requests. You don't manage these agents—they work together seamlessly based on what you ask for.
+The Chat Assistant uses multiple specialized AI agents that automatically coordinate to handle your requests. You don't manage these agents-they work together seamlessly based on what you ask for.
 
 **Specialized Agents:**
 
@@ -75,7 +75,7 @@ The Chat Assistant uses multiple specialized AI agents that automatically coordi
 
 **Onboarding Specialist** - Activates for new project setup. Focuses on delivering 3-5 high-impact tests quickly with minimal questions. Designed to help you master the key features of QA.tech.
 
-Just describe what you want naturally—the system routes to the right specialist and coordinates complex workflows automatically.
+Just describe what you want naturally - the system routes to the right specialist and coordinates complex workflows automatically.
 
 ## Available Tools Reference
 
@@ -95,6 +95,6 @@ The AI Chat agent has access to 17 specialized tools organized into these catego
 **Advanced:** handover-to-different-agent (automatically switches between specialized agents based on your needs)
 </Note>
 
-You don't need to know which tools the assistant uses—just describe what you want to accomplish, and it will choose the right tools automatically.
+You don't need to know which tools the assistant uses - just describe what you want to accomplish, and it will choose the right tools automatically.
 
 Our AI agents and their capabilities are continuously evolving. We regularly add new tools and enhance existing ones to make the Chat Assistant even more powerful and helpful for your testing needs.
