--- a/core-concepts/tests-and-results.mdx
+++ b/core-concepts/tests-and-results.mdx
@@ -40,9 +40,9 @@ Every time a test run is triggered, we run the selected scenarios. The result is
 
 When viewing test run results, you can quickly find specific tests using filters and search:
 
-- **Filter by result** — Show only PASSED, FAILED, or SKIPPED tests
-- **Filter by status** — Filter tests by execution state (INITIATED, RUNNING, COMPLETED, ERROR, CANCELLED)
-- **Search by name** — Find specific tests using the search box
+- **Filter by result** - Show only PASSED, FAILED, or SKIPPED tests
+- **Filter by status** - Filter tests by execution state (INITIATED, RUNNING, COMPLETED, ERROR, CANCELLED)
+- **Search by name** - Find specific tests using the search box
 
 <Note>
 **Result vs. Status**: A test's _result_ is the outcome after completion (PASSED/FAILED/SKIPPED), while _status_ tracks the execution state. For example, a test can have STATUS=COMPLETED with RESULT=FAILED.
