--- a/integrations/slack.mdx
+++ b/integrations/slack.mdx
@@ -43,3 +43,7 @@ The QA.tech Slack Bot brings AI-powered testing assistance directly into your Sl
   Please provide feedback using 👍/👎 reactions on bot responses, or [contact
   us](mailto:hi@qa.tech) with any questions or suggestions.
 </Note>
+
+## Slack Notifications
+
+The QA.tech Slack Bot also supports Slack notifications for test runs. Configure Slack notifications to receive run completion alerts and use per-run channel overrides to send notifications to specific channels. See [Notifications](/core-concepts/notifications) for setup instructions and API details.
