--- a/best-practices/creating-tests.mdx
+++ b/best-practices/creating-tests.mdx
@@ -29,11 +29,11 @@ Click the **"Add Test Case"** button to open the test creation modal with two op
   alt="Add Test Case Button"
 />
 
-**Suggested tests** — QA.tech continuously crawls your application to discover testable features and interactions. These appear as AI-generated suggestions you can select and add to your project. Click "Analyze my site" to trigger a new crawl if you want fresh suggestions.
+**Suggested tests** - QA.tech continuously crawls your application to discover testable features and interactions. These appear as AI-generated suggestions you can select and add to your project. Click "Analyze my site" to trigger a new crawl if you want fresh suggestions.
 
 <img width="500px" src="/images/suggested-tests.png" alt="Suggested tests modal" />
 
-**Create your own test** — Describe what you want to test in natural language. The AI agent will understand your goal and attempt to generate the test steps automatically.
+**Create your own test** - Describe what you want to test in natural language. The AI agent will understand your goal and attempt to generate the test steps automatically.
 
 <img width="500px" src="/images/create-tests-modal.png" alt="Create your own test modal" />
 
@@ -49,11 +49,11 @@ Key fields:
 
 The [AI Chat Assistant](/core-concepts/ai-chat-assistant) provides a conversational, exploratory approach to test creation:
 
-**Natural conversation** — Describe your testing needs in plain English. Ask for multiple tests, request specific coverage areas, or iterate on suggestions through back-and-forth conversation.
+**Natural conversation** - Describe your testing needs in plain English. Ask for multiple tests, request specific coverage areas, or iterate on suggestions through back-and-forth conversation.
 
-**Upload context** — Drag and drop specification documents, design files, or requirements (PDFs, images, text files) directly into the chat. The AI uses this context to generate more accurate, relevant tests.
+**Upload context** - Drag and drop specification documents, design files, or requirements (PDFs, images, text files) directly into the chat. The AI uses this context to generate more accurate, relevant tests.
 
-**Safe experimentation** — Tests generated in chat aren't committed to your project until you explicitly click "Add Selected Tests". You can review, refine, or discard them without affecting your team. Uploaded files remain isolated to that chat conversation only.
+**Safe experimentation** - Tests generated in chat aren't committed to your project until you explicitly click "Add Selected Tests". You can review, refine, or discard them without affecting your team. Uploaded files remain isolated to that chat conversation only.
 
 <Tip>
 Example prompts:
@@ -76,9 +76,9 @@ After creating a test, the AI agent automatically attempts to execute it and gen
 
 <img width="700px" src="/images/edit-test-page.png" alt="Edit test page" />
 
-**Left sidebar** — View and edit the goal, expected result, and generated steps. The Settings tab lets you configure dependencies, add required configurations, or adjust agent settings.
+**Left sidebar** - View and edit the goal, expected result, and generated steps. The Settings tab lets you configure dependencies, add required configurations, or adjust agent settings.
 
-**Right panel** — Inspect the execution trace showing exactly what the agent did. This helps you verify the test behaves as intended.
+**Right panel** - Inspect the execution trace showing exactly what the agent did. This helps you verify the test behaves as intended.
 
 Update steps as needed and click **"Save & Run"** to test your changes. You can stop execution at any time with the **"Stop"** button.
 
@@ -116,9 +116,9 @@ The goal is the main objective of the test. The agent uses this to build steps a
 - Open the customer support chat and send a message
 
 **Keep your goals:**
-- **Action-oriented** — Start with verbs like "Create", "Search", "Navigate", "Add"
-- **Specific** — Include exact details (product name, user role, button labels)
-- **Focused** — Describe actions to take, not validation criteria
+- **Action-oriented** - Start with verbs like "Create", "Search", "Navigate", "Add"
+- **Specific** - Include exact details (product name, user role, button labels)
+- **Focused** - Describe actions to take, not validation criteria
 
 ### Writing a Good Expected Result
 
@@ -130,9 +130,9 @@ The expected result defines what the agent should verify at the end of the test.
 - The user receives an email with a password reset link
 
 **Keep your expected results:**
-- **Observable** — Focus on things that can be verified visually or through system responses
-- **Specific** — Include exact elements, messages, or states to check
-- **Outcome-focused** — Describe the end state, not how to get there
+- **Observable** - Focus on things that can be verified visually or through system responses
+- **Specific** - Include exact elements, messages, or states to check
+- **Outcome-focused** - Describe the end state, not how to get there
 
 <Tip>
 Keep tests to 10 steps or less. If you need more steps, create a new test with a [dependency](/core-concepts/dependencies) instead. Shorter tests are faster to execute and easier to maintain.
@@ -193,7 +193,7 @@ PROJECT: "E-commerce Platform"
 
 ### Using Test Plans for Release Management
 
-**Test Plans** group tests you want to run together and can be reused across different environments by updating their parameters (application and environment settings). For example, run the same "Smoke Tests" plan against staging, then production—no need to duplicate the plan.
+**Test Plans** group tests you want to run together and can be reused across different environments by updating their parameters (application and environment settings). For example, run the same "Smoke Tests" plan against staging, then production-no need to duplicate the plan.
 
 <Tip>
 **CI/CD Integration:** Test plans are designed for automation workflows. Use them with the [API](/api-reference/start-run) to trigger specific test suites from your deployment pipeline, GitHub Actions, or scheduled jobs. See [Test Plans](/core-concepts/test-plans) for API execution, scheduling, and environment override details.
