--- a/core-concepts/applications-and-environments.mdx
+++ b/core-concepts/applications-and-environments.mdx
@@ -116,7 +116,7 @@ When dealing with multiple products, versions, or releases in a single project:
 - **Create separate applications** for each distinct product or major version (e.g., "Product v1.0", "Product v2.0")
 - **Maintain different environments** for each application's deployment stages (e.g., `staging`, `production`, `preview`)
 - **Use Test Scenarios** to organize related tests within or across applications
-- **Use Test Plans** to group tests for execution—these can be reused across environments
+- **Use Test Plans** to group tests for execution - these can be reused across environments
 
 <Tip>
   For a detailed example of organizing tests across multiple versions, see [Organizing Tests for Complex Projects](/best-practices/creating-tests#organizing-tests-for-complex-projects).
