docs: add CI/CD integration overview and update configuration guides
- Add new CI/CD integration overview page explaining API-driven vs AI exploratory testing
- Refactor GitHub Actions guide with clearer structure and examples
- Expand GitLab CI/CD integration guide with implementation patterns
- Update preview environments and test plans documentation
- Update API reference documentation
- Remove temporary planning files (docs-update-plan.md, gh-action-examples.md)
- Fix em dashes to regular dashes per documentation standards

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -23,6 +23,7 @@ curl -X POST https://app.qa.tech/api/projects/YOUR_PROJECT_UUID/runs \
   -H "Authorization: Bearer YOUR_API_TOKEN" \
   -H "Content-Type: application/json" \
   -d '{
+    "integrationName": "API",
     "testPlanShortId": "abc123"
   }'
 ```
