--- a/configuration/github-actions.mdx
+++ b/configuration/github-actions.mdx
@@ -1,83 +1,35 @@
 ---
 title: GitHub Actions
-description: 'Trigger tests from CI/CD workflows with full control'
+description: 'Integrate QA.tech testing into GitHub Actions workflows'
 icon: 'github'
 ---
 
-Integrate QA.tech into your CI/CD workflows with the GitHub Action. You control which tests run, when they run, and which environments to test.
+Use the official QA.tech GitHub Action to trigger test runs from your workflows. This gives you full control over which test plans run, when they run, and which environments to test.
 
 <Note>
-Looking for automatic AI-powered PR reviews? See [GitHub App](/configuration/github-app) instead.
+**Looking for AI-powered testing?** The [GitHub App](/configuration/github-app) provides automatic test creation and PR reviews. This page covers the GitHub Action for API-driven testing.
 </Note>
+
+## Setup
 
 <Steps>
   <Step title="Configure Secrets">
-    Add the following secrets to your GitHub repository:
+    Add secrets to your GitHub repository (**Settings → Secrets and variables → Actions**):
     
     - `QATECH_API_TOKEN` - Your QA.tech API token
     - `QATECH_PROJECT_ID` - Your QA.tech project ID
     
-    You can find these values in your [project settings](https://app.qa.tech/current-project/settings/integrations).
-    
-    Learn more about [creating secrets in GitHub Actions](https://docs.github.com/en/actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-a-repository).
+    Find these in your [project settings](https://app.qa.tech/current-project/settings/integrations).
   </Step>
   
-  <Step title="Create Workflow File">
-    Create `.github/workflows/qatech.yml` in your repository:
-
-    ```yaml
-    name: QA.tech Tests
-    on:
-      push:
-        branches:
-          - main
-
-    jobs:
-      test:
-        runs-on: ubuntu-latest
-        steps:
-          - uses: QAdottech/run-action@v2
-            with:
-              project_id: ${{ secrets.QATECH_PROJECT_ID }}
-              api_token: ${{ secrets.QATECH_API_TOKEN }}
-              blocking: true
-    ```
-
-    This runs all tests in your project whenever code is pushed to `main`. The `blocking` option waits for test results before completing the workflow.
-  </Step>
-
-  <Step title="Trigger Your First Run">
-    Push to your main branch or open a PR (depending on your workflow configuration). QA.tech will execute your tests and report results directly in the GitHub Actions UI.
-  </Step>
-</Steps>
-
-<Note>
-Tests triggered via GitHub Actions automatically send [notifications](/core-concepts/notifications) to configured Slack channels when complete. When using the [direct API integration](#direct-api-integration), you can override notification destinations on a per-run basis to send results to specific Slack channels. See [Per-Run Notification Overrides](/core-concepts/notifications#per-run-notification-overrides) for details.
-</Note>
-
-## Basic Usage
-
-The simplest way to run tests is without any additional configuration:
+  <Step title="Create Workflow">
+    Create `.github/workflows/qatech.yml`:
 
 ```yaml
-- uses: QAdottech/run-action@v2
-  with:
-    project_id: ${{ secrets.QATECH_PROJECT_ID }}
-    api_token: ${{ secrets.QATECH_API_TOKEN }}
-    blocking: true  # Wait for results before continuing
-```
-
-This executes all tests in your project. For more control, see the examples below.
-
-## Testing Pull Requests
-
-Run tests automatically when PRs are opened or updated:
-
-```yaml
-name: QA.tech PR Tests
+name: QA.tech Tests
 on:
-  pull_request:
-    branches: [ main ]
+  push:
+    branches: [main]
 
 jobs:
   test:
@@ -87,21 +39,37 @@ jobs:
         with:
           project_id: ${{ secrets.QATECH_PROJECT_ID }}
           api_token: ${{ secrets.QATECH_API_TOKEN }}
-          test_plan_short_id: 'smoke-tests'  # Optional: run specific plan
+          blocking: true
+```
+  </Step>
+</Steps>
+
+## Implementation Patterns
+
+### Run on Pull Requests
+
+```yaml
+name: PR Tests
+on:
+  pull_request:
+    branches: [main]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: QAdottech/run-action@v2
+        with:
+          project_id: ${{ secrets.QATECH_PROJECT_ID }}
+          api_token: ${{ secrets.QATECH_API_TOKEN }}
+          test_plan_short_id: 'smoke-tests'
           blocking: true
 ```
 
-**When to use:**
-- Catch issues before merge
-- Validate changes against existing tests
-- Gate PRs based on test results
-
-## Testing Preview Deployments
-
-Test preview environments with dynamic URLs:
+### Test Preview Deployments
 
 ```yaml
-name: Test Preview Deployment
+name: Test Preview
 on:
   pull_request:
     types: [opened, synchronize]
@@ -116,7 +84,7 @@ jobs:
         id: deploy
         run: |
           # Your deployment logic
-          echo "url=https://preview-${{ github.event.number }}.vercel.app" >> $GITHUB_OUTPUT
+          echo "url=https://preview-${{ github.event.pull_request.number }}.vercel.app" >> $GITHUB_OUTPUT
 
   test:
     needs: deploy
@@ -131,24 +99,17 @@ jobs:
           applications_config: |
             {
               "applications": {
-                "frontend-app-id": {
+                "frontend-app": {
                   "environment": {
                     "url": "${{ needs.deploy.outputs.preview_url }}",
-                    "name": "PR-${{ github.event.number }}"
+                    "name": "PR-${{ github.event.pull_request.number }}"
                   }
                 }
               }
             }
 ```
 
-**When to use:**
-- Testing Vercel/Netlify preview deployments
-- Multi-environment testing (frontend + backend)
-- PR-specific URL testing
-
-## Scheduled Testing
-
-Run tests on a schedule (e.g., nightly regression suite):
+### Scheduled Testing
 
 ```yaml
 name: Nightly Tests
@@ -165,137 +126,25 @@ jobs:
           project_id: ${{ secrets.QATECH_PROJECT_ID }}
           api_token: ${{ secrets.QATECH_API_TOKEN }}
           test_plan_short_id: 'full-regression'
-          blocking: false  # Don't block on schedule
+          blocking: false
 ```
 
-**When to use:**
-- Comprehensive nightly regression testing
-- Production smoke tests
-- Load testing during off-peak hours
+### Use Action Outputs
 
-## Direct API Integration
+```yaml
+- uses: QAdottech/run-action@v2
+  id: qatech
+  with:
+    project_id: ${{ secrets.QATECH_PROJECT_ID }}
+    api_token: ${{ secrets.QATECH_API_TOKEN }}
+    blocking: true
 
-If you prefer direct API calls instead of the GitHub Action, you can use the REST API.
-
-### Basic Request
-
-```bash
-curl -X POST \
-  -H "Authorization: Bearer $QATECH_API_TOKEN" \
-  -H "Content-Type: application/json" \
-  -d '{"testPlanShortId": "your-test-plan-id"}' \
-  https://app.qa.tech/api/projects/$QATECH_PROJECT_ID/runs
+- name: Check Results
+  if: steps.qatech.outputs.run_result == 'FAILED'
+  run: echo "Tests failed! See ${{ steps.qatech.outputs.run_url }}"
 ```
 
-### With Environment Overrides
-
-```bash
-curl -X POST \
-  -H "Authorization: Bearer $QATECH_API_TOKEN" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "testPlanShortId": "your-test-plan-id",
-    "applications": {
-      "app-short-id": {
-        "environment": {
-          "url": "https://preview.example.com",
-          "name": "Preview Environment"
-        }
-      }
-    }
-  }' \
-  https://app.qa.tech/api/projects/$QATECH_PROJECT_ID/runs
-```
-
-### With Notification Overrides
-
-Send notifications to specific Slack channels for this run:
-
-```bash
-curl -X POST \
-  -H "Authorization: Bearer $QATECH_API_TOKEN" \
-  -H "Content-Type: application/json" \
-  -d '{
-    "testPlanShortId": "your-test-plan-id",
-    "notifications": [
-      { "type": "slack", "channel": "C0478ABCDEF", "notifyOn": "always" },
-      { "type": "slack", "channel": "C0123FAIL42", "notifyOn": "failure" }
-    ]
-  }' \
-  https://app.qa.tech/api/projects/$QATECH_PROJECT_ID/runs
-```
-
-This overrides the default project Slack channel and sends notifications to the specified channels instead. See the [Start Run API Reference](/api-reference/start-run#slack-notification-overrides) for complete details.
-
-**Response format:**
-```json
-{
-  "success": true,
-  "run": {
-    "id": "run_abc123",
-    "shortId": "abc123",
-    "url": "https://app.qa.tech/projects/project-123/results/abc123",
-    "testCount": 5
-  }
-}
-```
-
-See the [Start Run API Reference](/api-reference/start-run) for complete documentation including error responses and authentication details.
-
-## Exploratory Testing with @qatech
-
-<Warning>
-**Private Beta** - This feature is currently in private beta. Request access by emailing daniel@qa.tech
-</Warning>
-
-Trigger deep exploratory testing on any pull request by mentioning `@qatech` in a PR comment. The AI agent analyzes your changes, discovers functionality gaps, creates tests, and provides detailed feedback.
-
-<Note>
-This is different from [automatic PR reviews](/configuration/github-app). Exploratory testing is on-demand and focuses on discovering issues through interactive testing, while automatic reviews run on every PR.
-</Note>
-
-**How it works:**
-
-Mention `@qatech` anywhere in a PR comment:
-
-```
-@qatech please test the new payment flow
-```
-
-The agent will:
-1. **Analyze changes** - Examines PR diff and crawls the preview deployment
-2. **Check coverage** - Identifies which existing tests apply
-3. **Create tests** - Generates new tests for untested functionality
-4. **Run tests** - Executes relevant tests against the PR preview
-5. **Post review** - Writes a detailed GitHub review with findings
-
-**When to use exploratory testing vs automatic reviews:**
-
-| Use Exploratory Testing | Use Automatic PR Reviews |
-|:------------------------|:-------------------------|
-| Deep investigation of complex changes | Every PR as standard gating |
-| Interactive testing with custom instructions | Hands-off automated coverage |
-| Specific areas need thorough validation | General functional regression |
-| Debugging test failures | Consistent baseline testing |
-
-**Example use cases:**
-- "Test the entire checkout flow with different payment methods"
-- "Explore what happens when users upload large files"
-- "Check if the new search handles edge cases"
-
-**Request private beta access:**
-
-Email daniel@qa.tech with:
-- Organization name
-- GitHub repository
-- Use case (what you want to test)
-
-You'll receive setup instructions and access within 1-2 business days.
-
-## Configuration Reference
-
-<Note>
-**GitHub Action Parameter Reference**
+## Action Reference
 
 ### Inputs
 
@@ -312,14 +161,19 @@ You'll receive setup instructions and access within 1-2 business days.
 
 | Output | Description |
 |:-------|:------------|
-| `runId` | The ID of the created test run |
-| `runShortId` | Short ID for the test run |
-| `success` | Boolean indicating if run was successful |
-| `run_result` | Test execution result (`PASSED`, `FAILED`, `SKIPPED`) - only when `blocking: true` |
-| `run_status` | Final run status (`COMPLETED`, `ERROR`, etc.) - only when `blocking: true` |
-</Note>
+| `run_created` | Whether the test run was created successfully |
+| `run_short_id` | The short ID of the run |
+| `run_url` | The URL of the run |
+| `run_status` | Final status (`COMPLETED`, `ERROR`, `CANCELLED`) - only when `blocking: true` |
+| `run_result` | Test result (`PASSED`, `FAILED`, `SKIPPED`) - only when `blocking: true` |
 
-## Related Features
+## Direct API Alternative
 
-- **Automatic PR reviews:** [GitHub App](/configuration/github-app) runs tests on every PR
-- **Direct API:** [Start Run API Reference](/api-reference/start-run) for custom integrations
+If you prefer curl over the Action, see the [Start Run API Reference](/api-reference/start-run) for examples.
+
+## Related Documentation
+
+- **[CI/CD Integration](/configuration/ci-cd-integration)** - Overview of integration modes
+- **[GitHub App](/configuration/github-app)** - AI-powered automatic PR reviews
+- **[API Reference](/api-reference/start-run)** - Complete API documentation
+- **[Notifications](/core-concepts/notifications)** - Slack notification configuration
