--- a/core-concepts/test-plans.mdx
+++ b/core-concepts/test-plans.mdx
@@ -35,19 +35,50 @@ When adding test cases to a test plan, keep in mind:
 
 ## Execution Methods
 
-### Github Actions Integration
+### CI/CD Integration
+
+Test Plans are the primary way to run tests from CI/CD pipelines. You can trigger test plans programmatically via the QA.tech REST API from any CI/CD system. See [CI/CD Integration](/configuration/ci-cd-integration) for an overview of integration options and platform-specific guides.
+
+**How it works:**
+1. Create a test plan and add test cases to it
+2. Get the test plan's short ID ([6-character ID](/configuration/gitlab#finding-your-test-plan-short-id) visible in the test plan URL)
+3. Trigger the test plan via API from your CI/CD pipeline
+
+**Should work with any CI/CD system** - Since QA.tech uses a standard REST API, you can integrate from any CI/CD platform that can make HTTP requests (using curl, HTTP libraries, or built-in HTTP steps). Examples include:
+
+- GitLab CI/CD
+- GitHub Actions
+- Bitbucket Pipelines
+- Azure DevOps
+- CircleCI
+- Jenkins
+- Any other CI/CD system with HTTP request capabilities
+
+### GitHub Actions Integration
 
 You can automate test execution by integrating Test Plans with your GitHub workflows. This integration allows you to:
 
-Trigger tests automatically after deployments
-Run tests on pull requests
-Execute tests on any GitHub event
+- Trigger tests automatically after deployments
+- Run tests on pull requests
+- Execute tests on any GitHub event
 
-Read more how to setup [Github Actions](/configuration/github).
+Read more about setting up [GitHub Actions](/configuration/github-actions).
 
 ### API Execution
 
-Test Plans can be triggered programmatically through the API. For detailed information about available endpoints and parameters, refer to the [API reference documentation](/api-reference/start-the-tests).
+Test Plans can be triggered programmatically through the API. For detailed information about available endpoints and parameters, refer to the [API reference documentation](/api-reference/start-run).
+
+**Example:**
+```bash
+curl -X POST https://app.qa.tech/api/projects/YOUR_PROJECT_UUID/runs \
+  -H "Authorization: Bearer YOUR_API_TOKEN" \
+  -H "Content-Type: application/json" \
+  -d '{
+    "testPlanShortId": "abc123"
+  }'
+```
+
+The `testPlanShortId` is the [6-character short ID](/configuration/gitlab#finding-your-test-plan-short-id) visible in your test plan URL (e.g., `https://app.qa.tech/.../test-plans/abc123`).
 
 ### Scheduled Execution
 
